<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <EditText
        android:id="@+id/fragment_vendor_create_edittext_name"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:textColor="@color/whiteText"
        android:textColorHighlight="@color/whiteText"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="372dp"
        android:hint="@string/hint_vendor_name"
        android:textSize="14sp"
        android:inputType="textCapWords"
        app:layout_constraintBottom_toTopOf="@+id/fragment_vendor_create_button_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/fragment_vendor_create_edittext_phone"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:textColor="@color/whiteText"
        android:textColorHighlight="@color/whiteText"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="316dp"
        android:hint="@string/hint_vendor_phone"
        android:textSize="14sp"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/fragment_vendor_create_button_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/fragment_vendor_create_edittext_email"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="264dp"
        android:hint="@string/hint_vendor_email"
        android:textSize="14sp"
        android:inputType="textWebEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/fragment_vendor_create_button_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/fragment_vendor_create_edittext_street"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="208dp"
        android:hint="@string/hint_vendor_street"
        android:textSize="14sp"
        android:inputType="textCapWords"
        app:layout_constraintBottom_toTopOf="@+id/fragment_vendor_create_button_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/fragment_vendor_create_edittext_city"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="156dp"
        android:hint="@string/hint_vendor_city"
        android:textSize="14sp"
        android:inputType="textCapWords"
        app:layout_constraintBottom_toTopOf="@+id/fragment_vendor_create_button_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/fragment_vendor_create_spinner_states"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="96dp"
        android:hint="@string/hint_vendor_state"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_vendor_create_button_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/fragment_vendor_create_edittext_zipcode"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="40dp"
        android:hint="@string/hint_vendor_zipcode"
        android:inputType="number"
        android:maxLength="5"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_vendor_create_button_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fragment_vendor_create_button_submit"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:background="@drawable/button_shape"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="76dp"
        android:text="@string/btn_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>