<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <EditText
        android:id="@+id/fragment_printer_create_edittext_make"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:textColor="@color/whiteText"
        android:textColorHighlight="@color/whiteText"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="36dp"
        android:hint="@string/hint_printer_make"
        android:inputType="textCapWords"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_printer_create_spinner_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/fragment_printer_create_edittext_model"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:textColor="@color/whiteText"
        android:textColorHighlight="@color/whiteText"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="36dp"
        android:hint="@string/hint_printer_model"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_printer_create_spinner_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/fragment_printer_create_spinner_status"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:textColor="@color/whiteText"
        android:textColorHighlight="@color/whiteText"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_printer_create_edittext_serial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/fragment_printer_create_spinner_color"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:textColor="@color/whiteText"
        android:textColorHighlight="@color/whiteText"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_printer_create_edittext_owner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/fragment_printer_create_edittext_serial"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:textColor="@color/whiteText"
        android:textColorHighlight="@color/whiteText"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="28dp"
        android:hint="@string/hint_printer_serial"
        android:inputType="textCapCharacters"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_printer_create_edittext_dept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/fragment_printer_create_edittext_owner"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:textColor="@color/whiteText"
        android:textColorHighlight="@color/whiteText"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="28dp"
        android:hint="@string/hint_printer_owner"
        android:inputType="textCapWords"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_printer_create_edittext_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/fragment_printer_create_edittext_dept"
        android:layout_width="139dp"
        android:layout_height="42dp"
        android:textColor="@color/whiteText"
        android:textColorHighlight="@color/whiteText"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/hint_printer_dept"
        android:inputType="textCapWords"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.532" />

    <EditText
        android:id="@+id/fragment_printer_create_edittext_location"
        android:layout_width="157dp"
        android:layout_height="42dp"
        android:textColor="@color/whiteText"
        android:textColorHighlight="@color/whiteText"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/hint_printer_location"
        android:inputType="textCapWords"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.532" />

    <EditText
        android:id="@+id/fragment_printer_create_edittext_floor"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:textColor="@color/whiteText"
        android:textColorHighlight="@color/whiteText"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/hint_printer_floor"
        android:inputType="textCapWords"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.645" />

    <EditText
        android:id="@+id/fragment_printer_create_edittext_ip"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:textColor="@color/whiteText"
        android:textColorHighlight="@color/whiteText"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/hint_printer_ip"
        android:inputType="number"
        android:maxLength="3"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.769" />

    <Button
        android:id="@+id/fragment_printer_button_submit"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:background="@drawable/button_shape"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="56dp"
        android:text="@string/btn_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>